foo-corp/namespaces/online/shipping-app-backend/shipping-dev/netpol-allow-frontend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-allow
#  namespace: default
spec:
  # Apply this policy to guestbook frontend pods only
  podSelector:
    matchLabels:
      app: guestbook
      tier: frontend
  # Allow ingress from anywhere
  ingress:
  - from: []
  # Allow egress only to Redis backend pods
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
          tier: backend
  - ports:
    # Allow DNS queries by enabling port 53
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    # Allow Redis backend queries by enabling port 6379
    - port: 6379
      protocol: UDP
    - port: 6379
      protocol: TCP
