foo-corp/namespaces/online/shipping-app-backend/shipping-dev/protect-nginx.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shipping-dev-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - {}
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
